--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/png" href="./favicon.png">
-	<title>Indecision App</title>
+	<title>Expensify App</title>
 </head>
 
 <body>
